--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,6 +5,10 @@ name: CI/CD Pipeline
 on:
     push:
         branches: [ main ]
+        # paths-ignore: 
+        #   - 'Readme.md'
+        #   - 'docs/**'
+        #   - 
     pull_request:
         branches: [ main]
 
@@ -55,7 +59,7 @@ jobs:
       run: mvn -B package --file pom.xml -DskipTests
 
     - name: Upload JAR para deploy
-      uses: actions/upload-aritfact@v4
+      uses: actions/upload-artifact@v4
       with: 
         name: app-jar
         path: target/*.jar
